videorestserver/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: dataprovider
  name: strip-video-prefix
spec:
  stripPrefix:
    prefixes:
      - /video
